# pychub2

./: .gitignore  README.md  generate_github_urls.sh  pyproject.toml  setup.py  setup.sh
docs/: CHANGELOG.md  DEV_AND_CONTRIB.md  RELEASE_NOTES.md  USER_GUIDE.md  chubproject-all-options.toml
src/pychub/helper/: multiformat_deserializable_mixin.py  multiformat_model_mixin.py  multiformat_serializable_mixin.py  strategy_loader.py  stream.py  sys_check_utils.py  toml_utils.py  wheel_tag_utils.py
src/pychub/model/build_lifecycle/: __init__.py  buildplan_model.py
src/pychub/model/caching/: base_cache_index_model.py  metadata_cache_index_model.py  wheel_cache_index_model.py
src/pychub/model/compatibility/: artifact_resolution_strategy_config_model.py  compatibility_resolution_model.py  compatibility_spec_model.py  pep658_metadata_model.py  pep691_metadata_model.py  resolver_config_model.py
src/pychub/model/packaging/: __init__.py  includes_model.py  scripts_model.py  wheelinfo_model.py  wheels_model.py
src/pychub/model/project/: __init__.py  chubconfig_model.py  chubproject_model.py  chubproject_provenance_model.py
src/pychub/package/: cli.py  constants.py  context_vars.py  main.py  packaging_context_vars.py
src/pychub/package/domain/: artifacts_model.py  buildplan_model.py  compatibility_model.py  project_model.py
src/pychub/package/lifecycle/: packaging_context.py
src/pychub/package/lifecycle/audit/: audit_emitter.py  build_event_model.py
src/pychub/package/lifecycle/init/: immediate_operations.py  initializer.py
src/pychub/package/lifecycle/init/project/: project_file_analysis.py  project_path_strategy.py
src/pychub/package/lifecycle/init/project/pathdeps/: default_path_strategy.py  hatch_path_strategy.py  pdm_path_strategy.py  poetry_path_strategy.py  project_path_strategy_base.py  project_path_strategy_registry.py
src/pychub/package/lifecycle/plan/: planner.py
src/pychub/package/lifecycle/plan/audit/: audit_emitter.py
src/pychub/package/lifecycle/plan/compatibility/: compatibility_evaluator.py  compatibility_resolver.py  compatibility_spec.toml  compatibility_spec_loader.py  python_version_discovery.py
src/pychub/package/lifecycle/plan/compatibility/spec/: compatibility_spec_loader.py
src/pychub/package/lifecycle/plan/resolution/: artifact_cache.py  artifact_resolution.py  artifact_resolution_strategy.py  caching_model.py  metadata_strategy.py  resolution_config_model.py  resolution_context_model.py  resolution_context_vars.py
src/pychub/package/lifecycle/plan/resolution/metadata/: metadata_cache.py  metadata_resolver.py  metadata_strategy.py
src/pychub/package/lifecycle/plan/resolution/metadata/metadata_source/: base_metadata_strategy.py  metadata_strategy_registry.py
src/pychub/package/lifecycle/plan/resolution/wheels/: wheel_cache.py  wheel_resolver.py  wheel_strategy.py
src/pychub/package/lifecycle/plan/resolution/wheels/wheel_source/: wheel_resolution_strategy.py  wheel_strategy_registry.py
